# dataflow-doc-generator

./: .gitignore  LICENSE  PREPAREENV.md  README.md  config.yml  database.html  main.py  output-files.json  pyproject.toml  requirements.txt  setup.py
output/: database.html  dflw_edges.json  dflw_objects.json  output-files.json
sample/ScoreManager_DB/schemas/dm/: schema dm.sql
sample/ScoreManager_DB/schemas/dm/views/: view dim_course_staff.sql  view dim_courses.sql  view dim_mentors.sql  view dim_students.sql  view dim_subtasks.sql  view fact_scores.sql  view rls_mentors_courses.sql  view rls_students_courses.sql  view rls_students_scores.sql  view vw_dashboard_geography.sql  view vw_dashboard_scores.sql
sample/ScoreManager_DB/schemas/lab/: schema lab.sql
sample/ScoreManager_DB/schemas/lab/functions/: function udf_get_check_script_by_subtask_id(integer).sql  function udf_get_status_id_by_name(character varying).sql
sample/ScoreManager_DB/schemas/lab/sequences/: sequence bonus_bonus_id_seq.sql  sequence check_script_check_script_id_seq.sql  sequence city_city_id_seq.sql  (+14 more)
sample/ScoreManager_DB/schemas/mentor/: schema mentor.sql
src/: config.py  database.html  dataflow_doc_generator.py  dflw_getfiles.py  dflw_main.py  dflw_modules.py  dflw_pocs.py  dflw_report.py  dflw_topological_sort.py  main.py  report.py  sql_processor.py  tasks.txt
src/common/: __init__.py  config.py  crypto.py  dflw_doc_generator.py  dflw_files.py  dflw_modules.py  dflw_topological_sort.py  logger.py  neo4j_handler.py
src/utils/: encrypt_neo4j_password.py  load_neo4j_data.py
(+70 files in other folders)
